--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
           <p><a href="mailto:tauhidjafri21@gmail.com">tauhidjafri21@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
-          <img src="./assets/phone.png" alt="Phone icon" class="icon contact-icon" />
+          <img src="./assets/education.png" alt="Phone icon" class="icon contact-icon" />
           <p><a href="tel:+917000130796">+91 7000130796</a></p>
         </div>
         <div class="contact-info-container">
